Fix Java 11 compatibility: replace Stream.toList() with Collectors.toList()
Stream.toList() is a Java 16+ API. The project targets Java 11.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>